--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Responsive Nav</title>
+    <script src="https://kit.fontawesome.com/b5252524d8.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    this is nav
+   <nav>
+        
+   <label class="logo">Lisa</label>
+    <i class="fa-solid fa-bars"></i>
+   <ul>
+    <li><a href="">Home</a></li>
+    <li><a href="">About</a></li>
+    <li><a href="">Portfolio</a></li>
+    <li><a href="">Contact</a></li>
+    <li><a href="#">Contact</a></li>
+   </ul>
+  
+</nav>
 </body>
 </html>
