added js for menu open and close

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
    <nav>
         
    <label class="logo">Lisa</label>
-    <i class="fa-solid fa-bars"></i>
-   <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
-    <li><a href="">Portfolio</a></li>
-    <li><a href="">Contact</a></li>
+    <i class="fa-solid fa-bars" id="burger"></i>
+    <i class="fa-solid fa-x" id="close"></i>
+   <ul class="menu" id="menu">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About Me</a></li>
+    <li><a href="#">Portfolio</a></li>
+    <li><a href="#">Resume</a></li>
     <li><a href="#">Contact</a></li>
    </ul>
   
 </nav>
+<script src="app.js"></script>
 </body>
 </html>
